<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="favourite">Favourite</string>
    <string name="playlists">Playlists</string>
    <string name="songs">Songs</string>
    <string name="song_name">Song Name</string>
    <string name="song_album">Song Author</string>
    <string name="start">00:00</string>
    <string name="end">99:99</string>
    <string name="equalizer">Equalizer</string>
</resources>