<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/favouriteBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/favourite"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/favourite"
                android:drawableTop="@drawable/ic_favorite"/>
            <Button
                android:id="@+id/playlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/playlists"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_weight="1"
                android:text="@string/equalizer"
                android:textColor="@color/black"
                android:drawableTop="@drawable/ic_equalizer"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/songs"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/musicRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>