<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:layout_marginBottom="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMusic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_play"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/song_album"
        android:layout_toEndOf="@id/imageMusic"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@+id/songLength"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/songAlbum"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/song_name"
        android:layout_toEndOf="@id/imageMusic"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@+id/songLength"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/songLength"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/end"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginHorizontal="5dp"/>

</RelativeLayout>