<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/black"
           android:text="@string/songs"
           android:layout_weight="1"
           android:textSize="25sp"
           android:gravity="center"/>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/musicImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/musicName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black"
        android:text="@string/song_name"
        android:textSize="22sp"
        android:textAlignment="center"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/previousBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_previous"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playPauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pause"
            android:layout_marginHorizontal="25dp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_next"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/start"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/favourite"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/favourite"
            android:drawableTop="@drawable/ic_favorite"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/favourite"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/equalizer"
            android:drawableTop="@drawable/ic_equalizer"/>

    </LinearLayout>
</LinearLayout>